syntax = "proto3";

package com.road.yishi.proto.star;

message StarInfoRspMsg {
  repeated int32 starInfo = 1;
}
